--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
 annotated-types==0.5.0
 anyio==3.7.1
 click==8.1.7
+coverage==7.3.2
 dependency-injector==4.41.0
 exceptiongroup==1.1.3
+Faker==19.10.0
 fastapi==0.103.0
 h11==0.14.0
 idna==3.4
+iniconfig==2.0.0
 kafka-python==2.0.2
 loguru==0.7.0
-pydantic==1.9.1
+packaging==23.2
+pluggy==1.3.0
+pydantic==1.10.13
+pydantic-factories==1.17.3
+pydantic_core==0.42.0
+pytest==7.4.2
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 six==1.16.0
 sniffio==1.3.0
@@ -16,3 +25,4 @@ starlette==0.27.0
 typing_extensions==4.7.1
 uvicorn==0.23.2
 uvloop==0.17.0
+
